subdir('collections/arrays')
subdir('collections/arraylist')
subdir('collections/bitset')
subdir('collections/deque')
subdir('collections/hashmap')
subdir('collections/hashset')
subdir('collections/linkedlist')
subdir('collections/optional')
subdir('collections/pair')
subdir('collections/priorityqueue')
subdir('collections/queue')
subdir('collections/result')
subdir('collections/stack')
subdir('collections/treemap')
subdir('collections/triple')
subdir('concurrent/countdownlatch')
subdir('concurrent/mutex')
subdir('concurrent/once')
subdir('concurrent/rwmutex')
subdir('concurrent/semaphore')
subdir('concurrent/waitgroup')
subdir('config/properties')
subdir('conv/convert')
subdir('crypto/hmac')
subdir('crypto/hash')
subdir('crypto/uuid')
subdir('encoding/base64')
subdir('encoding/hex')
subdir('encoding/url')
subdir('format/numberformat')
subdir('io/bufferedreader')
subdir('io/bufferedwriter')
subdir('io/files')
subdir('io/objects')
subdir('io/paths')
subdir('io/scanner')
subdir('io/temp')
subdir('io/stringbuilder')
subdir('io/stringjoiner')
subdir('io/strings')
subdir('lang')
subdir('lang/preconditions')
subdir('lang/process')
subdir('lang/randoms')
subdir('lang/stringescape')
subdir('lang/systemenv')
subdir('lang/systeminfo')
subdir('lang/threads')
subdir('log/logger')
subdir('log/loglevel')
subdir('math/math')
subdir('math/random')
subdir('net/url')
subdir('parser')
subdir('regex/pattern')
subdir('runtime/systemproperties')
subdir('text/regex')
subdir('time/datetime')
subdir('time/duration')
subdir('time/stopwatch')
