subdir('collections/arrays')
subdir('collections/arraylist')
subdir('collections/bitset')
subdir('collections/deque')
subdir('collections/hashmap')
subdir('collections/hashset')
subdir('collections/immutablelist')
subdir('collections/linkedlist')
subdir('collections/lists')
subdir('collections/lrucache')
subdir('collections/maps')
subdir('collections/multimap')
subdir('collections/optional')
subdir('collections/pair')
subdir('collections/priorityqueue')
subdir('collections/queue')
subdir('collections/result')
subdir('collections/stack')
subdir('collections/stream')
subdir('collections/treemap')
subdir('collections/triple')
subdir('concurrent/channel')
subdir('concurrent/countdownlatch')
subdir('concurrent/future')
subdir('concurrent/mutex')
subdir('concurrent/once')
subdir('concurrent/rwmutex')
subdir('concurrent/semaphore')
subdir('concurrent/threadpool')
subdir('concurrent/threadpool2')
subdir('concurrent/waitgroup')
subdir('config/properties')
subdir('conv/convert')
subdir('crypto/hmac')
subdir('crypto/hash')
subdir('crypto/uuid')
subdir('encoding/base64')
subdir('encoding/csv')
subdir('encoding/hex')
subdir('encoding/url')
subdir('format/numberformat')
subdir('io/atomicfile')
subdir('io/bufferedreader')
subdir('io/bufferedwriter')
subdir('io/console')
subdir('io/files')
subdir('io/filelock')
subdir('io/filesystem')
subdir('io/objects')
subdir('io/paths')
subdir('io/process')
subdir('io/resource')
subdir('io/scanner')
subdir('io/shell')
subdir('io/temp')
subdir('io/stringbuilder')
subdir('io/stringjoiner')
subdir('io/strings')
subdir('lang')
subdir('lang/exceptions')
subdir('lang/preconditions')
subdir('lang/process')
subdir('lang/randoms')
subdir('lang/shutdownhooks')
subdir('lang/stringescape')
subdir('lang/systemenv')
subdir('lang/systeminfo')
subdir('lang/threads')
subdir('log/logger')
subdir('log/loglevel')
subdir('math/bigdecimal')
subdir('math/biginteger')
subdir('math/math')
subdir('math/random')
subdir('net/circuitbreaker')
subdir('net/ratelimiter')
subdir('net/url')
subdir('net/retry')
subdir('parser')
subdir('regex/pattern')
subdir('runtime/systemproperties')
subdir('text/regex')
subdir('time/datetime')
subdir('time/dates')
subdir('time/duration')
subdir('time/stopwatch')
